--- a/examples/param_num_examples.ipynb
+++ b/examples/param_num_examples.ipynb
@@ -24,13 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "5799a0cc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def lrk_params( n, k):\n",
-    "    num = 2*n*k+k\n",
+    "def lrk_params( n, k, a, d, head, d_1):\n",
+    "    num = 2*n*k+k +  a*d*head*d_1\n",
     "    return num"
    ]
   },
